--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.cshtml
@@ -138,11 +138,12 @@
 
     @if (!isLinesMode && showDrop)
     {
-        <button class="sr-toggle" aria-expanded="false" aria-controls="art-drop-@Model.Id" ak-close-on-leave>
+        var id = $"art-drop-{Model.Parent?.Id}-{Model.Id}";
+        <button class="sr-toggle" aria-expanded="false" aria-controls="@id" ak-close-on-leave>
             <small class="sr-toggle-info">@T("Aria.Label.ExpandItem", Model.Name)</small>
         </button>
 
-        <div id="art-drop-@Model.Id" class="art-drop">
+        <div id="@id" class="art-drop">
             @if (showVariants)
             {
                 <partial name="Product.List.Item.Variants" model="Model" />
