WCAG: Fixed `aria-required-parent` rule violation on wishlist page

--- a/src/Smartstore.Web/Views/ShoppingCart/Wishlist.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Wishlist.cshtml
@@ -31,7 +31,7 @@
                 </div>
 
                 <form asp-route="Wishlist" method="post">
-                    <div class="cart-container mb-3">
+                    <div class="cart-container mb-3" role="grid">
                         @* Cart Items *@
                         <div id="cart-items" class="cart cart-editable">
                             <div class="cart-body">
