--- a/src/Smartstore.Web/Views/Shared/Components/CookieManager/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/CookieManager/Default.cshtml
@@ -44,9 +44,13 @@
                         <div class="cm-consent-switch col col-auto">
                             <input type="checkbox" asp-for="RequiredConsent" disabled sm-switch="true" aria-labelledby="cookie-required-header" />
                         </div>
-                        <button id="cookie-required-header" class="cm-consent-title collapsed col reset" type="button"
-                                data-toggle="collapse" data-target="#required-cookies"
-                                aria-controls="required-cookies" aria-expanded="false" role="heading" aria-level="5">
+                        <button id="cookie-required-header" 
+                                class="cm-consent-title collapsed col reset" 
+                                type="button"
+                                data-toggle="collapse" 
+                                data-target="#required-cookies"
+                                aria-controls="required-cookies" 
+                                aria-expanded="false">
                             @T("CookieManager.Dialog.Required.Heading")
                             <i class="fas fa-angle-up collapse-chevron" aria-hidden="true"></i>
                         </button>
@@ -74,9 +78,13 @@
                         <div class="cm-consent-switch col col-auto">
                             <input type="checkbox" asp-for="AnalyticsConsent" sm-switch="true" aria-labelledby="cookie-analytics-header" />
                         </div>
-                        <button id="cookie-analytics-header" class="cm-consent-title collapsed col reset" type="button"
-                                data-toggle="collapse" data-target="#analytics-cookies"
-                                aria-controls="analytics-cookies" aria-expanded="false" role="heading" aria-level="5">
+                        <button id="cookie-analytics-header" 
+                                class="cm-consent-title collapsed col reset" 
+                                type="button"
+                                data-toggle="collapse" 
+                                data-target="#analytics-cookies"
+                                aria-controls="analytics-cookies" 
+                                aria-expanded="false">
                             @T("CookieManager.Dialog.Analytics.Heading")
                             <i class="fas fa-angle-up collapse-chevron" aria-hidden="true"></i>
                         </button>
@@ -104,9 +112,13 @@
                         <div class="cm-consent-switch col col-auto">
                             <input type="checkbox" asp-for="ThirdPartyConsent" sm-switch="true" aria-labelledby="cookie-thirdparty-header" />
                         </div>
-                        <button id="cookie-thirdparty-header" class="cm-consent-title collapsed col reset" type="button"
-                            data-toggle="collapse" data-target="#third-party-cookies" 
-                            aria-controls="third-party-cookies" aria-expanded="false" role="heading" aria-level="5">
+                        <button id="cookie-thirdparty-header" 
+                                class="cm-consent-title collapsed col reset"
+                                type="button"
+                                data-toggle="collapse" 
+                                data-target="#third-party-cookies" 
+                                aria-controls="third-party-cookies" 
+                                aria-expanded="false">
                             @T("CookieManager.Dialog.ThirdParty.Heading")
                             <i class="fas fa-angle-up collapse-chevron" aria-hidden="true"></i>
                         </button>
@@ -134,9 +146,13 @@
                         <div class="cm-consent-switch col col-auto">
                             <input type="checkbox" asp-for="AdUserDataConsent" sm-switch="true" aria-labelledby="cookie-aduserdataconsent-header" />
                         </div>
-                        <button id="cookie-aduserdataconsent-header" class="cm-consent-title collapsed col reset" type="button"
-                            data-toggle="collapse" data-target="#ad-user-data-consent" 
-                            aria-controls="ad-user-data-consent" aria-expanded="false" role="heading" aria-level="5">
+                        <button id="cookie-aduserdataconsent-header" 
+                                class="cm-consent-title collapsed col reset"
+                                type="button"
+                                data-toggle="collapse" 
+                                data-target="#ad-user-data-consent" 
+                                aria-controls="ad-user-data-consent" 
+                                aria-expanded="false">
                             @T("CookieManager.Dialog.AdUserDataConsent.Heading")
                             <i class="fas fa-angle-up collapse-chevron" aria-hidden="true"></i>
                         </button>
@@ -164,9 +180,13 @@
                         <div class="cm-consent-switch col col-auto">
                             <input type="checkbox" asp-for="AdPersonalizationConsent" sm-switch="true" aria-labelledby="cookie-adpersonalizationconsent-header" />
                         </div>
-                        <button id="cookie-adpersonalizationconsent-header" class="cm-consent-title collapsed col reset" type="button"
-                            data-toggle="collapse" data-target="#ad-personalization-consent" 
-                            aria-controls="ad-personalization-consent" aria-expanded="false" role="heading" aria-level="5">
+                        <button id="cookie-adpersonalizationconsent-header" 
+                                class="cm-consent-title collapsed col reset" 
+                                type="button"
+                                data-toggle="collapse" 
+                                data-target="#ad-personalization-consent" 
+                                aria-controls="ad-personalization-consent" 
+                                aria-expanded="false">
                             @T("CookieManager.Dialog.AdPersonalizationConsent.Heading")
                             <i class="fas fa-angle-up collapse-chevron" aria-hidden="true"></i>
                         </button>
