_product.scss enhancements

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
@@ -344,7 +344,7 @@ $pd-offer-spacing:              $grid-gutter-width / 2;
 }
 
 .pd-promoprice-tip {
-    padding-inline-start: 0.5rem;
+    margin-inline-start: 0.5rem;
     color: $gray-600 !important;
 }
 
@@ -374,7 +374,7 @@ $pd-offer-spacing:              $grid-gutter-width / 2;
         font-size: $font-size-sm;
         overflow-x: auto;
 
-        th, td { padding-left: 0.5rem; padding-right: 0.5rem; }
+        :is(th, td) { padding-inline: 0.5rem; }
         th { font-weight: $font-weight-medium; }
         .pd-tierprice-qty { font-weight: bold }
     }
@@ -466,7 +466,7 @@ $pd-offer-spacing:              $grid-gutter-width / 2;
 // ------------------------------------------------------
 
 .table-compare {
-    td, th {
+    :is(td, th) {
         width: 20%;
     }
     
@@ -659,8 +659,7 @@ $pd-offer-spacing:              $grid-gutter-width / 2;
         overflow: initial;
     }
 
-    .numberinput,
-    .qty-input-dropdown {
+    :is(.numberinput, .qty-input-dropdown) {
         box-shadow: var(--box-shadow-xs);
     }
 }
