WCAG: Badge focus styling

--- a/src/Smartstore.Web/wwwroot/shared/_badge.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_badge.scss
@@ -38,7 +38,7 @@
     transform: scale(0.85);
 }
 
-.badge:not(.badge-subtle, .badge-outline, .badge-light) > .btn-close {
+.badge:not(:is(.badge-subtle, .badge-outline, .badge-light)) > .btn-close {
     @extend .btn-close-white;
 }
 
