--- a/src/Smartstore.Web/Views/Product/Partials/Product.Tags.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Tags.cshtml
@@ -11,14 +11,14 @@
 
 <div class="pd-tags block">
     <div class="block-title">
-        <h4>@T("Products.Tags")</h4>
+        <h4 id="pd-tags-title">@T("Products.Tags")</h4>
     </div>
-    <div class="block-body pt-3 hstack flex-wrap gap-1">
+    <div class="block-body pt-3 hstack flex-wrap gap-1" role="listbox" aria-orientation="horizontal" aria-labelledby="pd-tags-title">
         @for (int i = 0; i < Model.Count; i++)
         {
             var tag = Model[i];
 
-            <a asp-route="ProductsByTag" asp-route-productTagId="@tag.Id" asp-route-path="@tag.Slug" class="pd-tag badge badge-lg badge-pill badge-light">
+            <a asp-route="ProductsByTag" asp-route-productTagId="@tag.Id" asp-route-path="@tag.Slug" class="pd-tag badge badge-lg badge-pill badge-light" role="option">
                 <span sm-language-attributes-for="tag.Name">@tag.Name</span>
                 <span class="pd-tag-count pl-1 fwn text-muted">@tag.ProductCount</span>
             </a>
