--- a/src/Smartstore.Web/Views/Product/Partials/Product.Bundle.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Bundle.cshtml
@@ -39,13 +39,13 @@
                 {
                     if (img != null)
                     {
-                        <a class="link-dnn" asp-route="Product" asp-route-SeName="@item.SeName" title="@item.Name">
+                        <a class="link-dnn d-inline-block" asp-route="Product" asp-route-SeName="@item.SeName" title="@item.Name">
                             <img sm-file="img" sm-size="gallery.ThumbSize" alt="@(img.Alt.IsEmpty() ? item.Name : img.Alt)" />
                         </a>
                     }
                     else
                     {
-                        <a class="link-dnn" asp-route="Product" asp-route-SeName="@item.SeName" title="@item.Name">@item.Name</a>
+                        <a class="link-dnn d-inline-block" asp-route="Product" asp-route-SeName="@item.SeName" title="@item.Name">@item.Name</a>
                     }
                 }
                 else
