WCAG: No tabindex for .nav-toggler on large screen

--- a/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -43,8 +43,7 @@
                             data-toggle="collapse" 
                             data-target="#footer-info" 
                             aria-controls="footer-info" 
-                            aria-expanded="false" 
-                            tabindex="0">
+                            aria-expanded="false" >
                             @Html.Raw(T("Footer.Info"))
                         </h4>
                         <div class="collapse nav-collapse" id="footer-info" role="region" aria-labelledby="footer-info-heading">
@@ -60,8 +59,7 @@
                             data-toggle="collapse" 
                             data-target="#footer-service" 
                             aria-controls="footer-service" 
-                            aria-expanded="false" 
-                            tabindex="0">
+                            aria-expanded="false">
                             <span class="d-none d-md-block">@Html.Raw(T("Footer.Service"))</span>
                             <span class="d-md-none">@Html.Raw(T("Footer.Service.Mobile"))</span>
                         </h4>
@@ -78,8 +76,7 @@
                             data-toggle="collapse" 
                             data-target="#footer-company" 
                             aria-controls="footer-company" 
-                            aria-expanded="false" 
-                            tabindex="0">
+                            aria-expanded="false">
                             <span class="d-none d-md-block">@Html.Raw(T("Footer.Company"))</span>
                             <span class="d-md-none">@Html.Raw(T("Footer.Company.Mobile"))</span>
                         </h4>
@@ -103,8 +100,7 @@
                                         data-toggle="collapse" 
                                         data-target="#newsletter-body"
                                         aria-controls="newsletter-body" 
-                                        aria-expanded="false" 
-                                        tabindex="0">
+                                        aria-expanded="false">
                                         @Html.Raw(T("Newsletter.Title"))
                                     </h4>
                                     <div id="newsletter-body" class="collapse nav-collapse" role="region" aria-labelledby="newsletter-subscribe-heading">
@@ -163,8 +159,7 @@
                                     data-toggle="collapse" 
                                     data-target="#footer-themes" 
                                     aria-controls="footer-themes" 
-                                    aria-expanded="false"  
-                                    tabindex="0">
+                                    aria-expanded="false">
                                     @Html.Raw(T("Footer.Themes"))
                                 </h4>
                                 <div id="footer-themes" class="content collapse nav-collapse" role="region" aria-labelledby="theme-selector-heading">
