WCAG: Don't tab .art-picture-block in generic lists

--- a/src/Smartstore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -29,7 +29,7 @@
                     <div class="art-picture-block">
                         @if (image.HasImage())
                         {
-                            <a class="art-picture img-center-container" href="@item.Url" title="@linkTitle">
+                            <a class="art-picture img-center-container" href="@item.Url" title="@linkTitle" aria-hidden="true" tabindex="-1">
                                 <img sm-model="image" loading="lazy" attr-alt='(image.Alt.IsEmpty(), item.Name)' />
                             </a>
                         }
