--- a/src/Smartstore.Web/Views/Catalog/ManufacturerAll.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/ManufacturerAll.cshtml
@@ -19,7 +19,7 @@
             {
                 var image = item.Image;
                 <div class="art-picture-block">
-                    <a href="@url" class="art-picture img-center-container">
+                    <a href="@url" class="art-picture img-center-container" aria-hidden="true" tabindex="-1">
                         <img sm-model="image" loading="lazy" attr-alt='(image.Alt.IsEmpty(), item.Name)' />
                     </a>
                 </div>
