--- a/src/Smartstore.Web/Views/Shared/Components/HomeBrands/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/HomeBrands/Default.cshtml
@@ -13,7 +13,7 @@
             var url = Url.RouteUrl("Manufacturer", new { SeName = item.SeName });
             <article class="art" data-id="@item.Id">
                 <div sm-if="Model.DisplayImages && item.Image != null && item.Image.HasImage()" class="art-picture-block">
-                    <a href="@url" class="art-picture img-center-container">
+                    <a href="@url" class="art-picture img-center-container" aria-hidden="true" tabindex="-1">
                         <img sm-model="item.Image" loading="lazy" attr-alt='(item.Image.Alt.IsEmpty(), item.Name)' />
                     </a>
                 </div>
