--- a/src/Smartstore.Web/Views/Checkout/PaymentMethod.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/PaymentMethod.cshtml
@@ -50,6 +50,15 @@
             return false;
         });
 
+        // TODO: (wcag) (mh) The payment page must be implemented with accordeon (see facets), when TAB from inside a panel can go to the next collapsible which it currently doesn't.
+        // That why we do it the short and easy way for now.
+        $(".list-group-item").on("keydown", function (e) {
+            if (e.key == "Enter") {
+                $(e.target).trigger('click');
+                return false;
+            }
+        });
+
         @if (Model.DisplayPaymentMethodIcons)
         {
             <text>
